--- a/MatchDat/Base.lproj/Main.storyboard
+++ b/MatchDat/Base.lproj/Main.storyboard
@@ -177,10 +177,25 @@
                                     <action selector="redealGame" destination="vXZ-lx-hvc" eventType="touchUpInside" id="hfs-9x-gyY"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Max Matched Cards" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BDq-94-fbT">
+                                <rect key="frame" x="20" y="372" width="156" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Jpq-Ao-xhc">
+                                <rect key="frame" x="184" y="365" width="116" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <segments>
+                                    <segment title="2"/>
+                                    <segment title="3"/>
+                                </segments>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.0" blue="0.50196081399917603" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <connections>
+                        <outlet property="maxMatchedCardsSegmentedControl" destination="Jpq-Ao-xhc" id="JJs-pZ-buu"/>
                         <outlet property="scoreLabel" destination="b08-Qs-cjn" id="cDC-th-OZE"/>
                         <outletCollection property="cardButtons" destination="glu-8g-G1d" id="EKs-yb-emV"/>
                         <outletCollection property="cardButtons" destination="F9g-aq-EYx" id="wmZ-he-JXY"/>
